<resources>
    <string name="app_name">TasKappa</string>
    <string name="action_settings">Settings</string>
    <string name="goal_Id">GoalId</string>
    <string name="goal_filter_spinner_title">All Projects</string>
    <string name="add_goalName">Enter project name</string>
    <string name="goal_name">Enter project name</string>
    <string name="label_colour_picker_button">Select label color...</string>
    <string name="goal_title_toolbar">Add Project</string>
    <string name="goal_edit_title_toolbar">Edit Project</string>
    <string name="home_title_toolbar">Project List</string>
    <string name="goal_done_icon">done</string>
    <string name="goal_title_hint">Enter project name</string>
    <string name="task_title_hint">Enter task name</string>
    <string name="notes_dialog_hint">Enter notes here</string>
    <string name="reward_hint">0 points</string>
    <string name="due_date_hint">Due Date</string>
    <string name="add_project_hint">Add to project...</string>
    <string name="add_category_list">Add to List...</string>
    <string name="no_due_date">No due date</string>
    <string name="add_goal_title">What\'s your project?</string>
    <string name="goal_subtask_section">Sub-task</string>
    <string name="goal_notes_title">Notes</string>
    <string name="goal_priority_title">When do you want to achieve this project?</string>
    <string name="goal_category_title">What type of project is this?</string>
    <string name="goal_duedate_title">Due Date</string>
    <string name="goal_notes_hint">Enter project notes</string>
    <string name="number_tasks">Add a task</string>
    <string name="number_tasks_complete">% complete</string>
    <string name="number_of_tasks">Number Of Tasks</string>
    <string name="task_notes_hint">Enter task notes</string>
    <string name="subtask_notes_hint">Enter subtask notes</string>
    <string name="db_parent_Goals">Projects</string>
    <string name="db_Goal_Name">name</string>
    <string name="db_Goal_Reason">reason</string>
    <string name="db_Goal_Time">time</string>
    <string name="collapsed">collapsed: %s</string>
    <string name="expanded">expanded: %s</string>
    <string name="db_Goal_Priority">priority</string>
    <string name="db_Goal_Type">type</string>
    <string name="delete">Delete</string>
    <string name="add_subtask">Add a subtask...</string>
    <string name="share">Share</string>
    <string name="toast_cant_change_list">Can\'t change lists for Projects</string>
    <string name="goal_name_hint">Project name</string>
    <string name="task_name_hint">Task name</string>
    <string name="navigation_drawer_open">Nav Drawer Opened</string>
    <string name="navigation_drawer_closed">Nav Drawer Closed</string>
    <string name="sub_task_name_hint">Subtask name</string>
    <string name="project_context_change_warning"> Project context can only be changed in Tasks</string>
    <string name="default_font" translatable="false">sans-serif-light</string>
    <string name="tab1">Details</string>
    <string name="tab2">Tasks</string>
    <string name="tab3">Stats</string>
    <string name="tab2_subTasks">subTasks</string>
    <string name="full_date_format">EEE MMM dd, yyyy</string>
    <string name="category_list_prefix_in_list">In List</string>
    <string name="category_list_prefix_in">In </string>
    <string name="label_color_picker_dialog">Select label color</string>
    <string name="notes_dialog_title">Edit Note</string>
    <string name="dialog_addtask_duedate">Due date</string>
    <string name="dialog_addtask_reward">Reward Points</string>
    <string name="nav_projects">Projects</string>
    <string name="nav_inbox">Inbox</string>
    <string name="nav_today">Today</string>
    <string name="nav_week">Week</string>
    <string name="nav_all">All</string>
    <string name="nav_completed">Completed</string>
    <string name="nav_list_family">Family</string>
    <string name="nav_list_work">Work</string>
    <string name="nav_list_travel">Travel</string>
    <string name="nav_list_personal">Personal</string>
    <string name="nav_add_lists">Add List</string>
    <string name="nav_add_settings">Settings</string>

    <string name="category_Inbox">Inbox</string>
    <string name="category_Project">Project</string>
    <string name="category_Family">Family</string>
    <string name="category_Work">Work</string>
    <string name="category_Personal">Personal</string>
    <string name="category_Travel">Travel</string>
    <string name="category_Shopping">Shopping</string>


    <string-array name="priority">
        <item>Immediately</item>
        <item>Short Term</item>
        <item>Long Term</item>recycler

    </string-array>


    <string-array name="category">
        <item>Career</item>
        <item>Financial</item>
        <item>Personal Development</item>
        <item>Spiritual</item>
        <item>Educational</item>
        <item>Relationship</item>
        <item>Health and Wellbeing</item>

    </string-array>

    <string-array name="goalfilter">
        <item>Projects</item>
        <item>By Name</item>
        <item>No Due Date</item>
    </string-array>

    <string-array name="inboxfilter">
        <item>Inbox</item>
        <item>By Name</item>
        <item>No Due Date</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>


