<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_move_to_inbox_black_24dp"
            android:title="@string/nav_inbox" />

        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_today_black_24dp"
            android:title="@string/nav_today" />
        <item
            android:id="@+id/nav_week"
            android:icon="@drawable/ic_next_week_black_24dp"
            android:title="@string/nav_week" />
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_all_inclusive_black_24dp"
            android:title="@string/nav_all" />
        <item
            android:id="@+id/nav_project"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/nav_projects" />
    </group>
</menu>
