<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentIdea.Fragments.GoalDetailsFragment"
    android:background="#FFFFFF">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        tools:context="com.example.jasmine.goalachieverassistant.GoalListActivity">


        <!--
           <android.support.design.widget.AppBarLayout
               android:layout_width="match_parent"
               android:id="@+id/app_bar_layout"
               android:layout_height="wrap_content"
               android:theme="@style/AppTheme.AppBarOverlay">

               <android.support.design.widget.CollapsingToolbarLayout
                   android:id="@+id/collapsing_tool_bar_layout"
                   android:layout_width="match_parent"
                   android:layout_height="200dp"
                   app:layout_scrollFlags="scroll|exitUntilCollapsed"
                   app:contentScrim="@color/colorPrimary"
                   android:fitsSystemWindows="true"
                   app:expandedTitleGravity="center_horizontal">


                   <android.support.v7.widget.Toolbar
                       android:id="@+id/toolbar"
                       android:layout_width="match_parent"
                       android:layout_height="?attr/actionBarSize"
                       android:background="@android:color/transparent"
                       app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                       app:layout_collapseMode="pin"
                       android:layout_marginBottom="100dp">
                   </android.support.v7.widget.Toolbar>

               </android.support.design.widget.CollapsingToolbarLayout>


           </android.support.design.widget.AppBarLayout>
       -->



        <TextView
            android:id="@+id/addGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/add_goal_title"

            android:textStyle="bold"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/editGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:cursorVisible="true"
            android:hint="@string/goal_title_hint"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:padding="10dp"
            android:background="@drawable/border_edit_text"
            android:textSize="12dp" />




        <TextView
            android:id="@+id/addReasonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/goal_reason_title"
            android:textStyle="bold"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/addReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:cursorVisible="true"
            android:hint="@string/goal_reason_hint"
            android:gravity="top|left"
            android:textCursorDrawable="@null"
            android:lines="6"
            android:background="@drawable/border_edit_text"
            android:padding="10dp"
            android:textSize="12dp"/>

        <!--
            <TextView
                android:id="@+id/goalPriorityText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/goal_priority_title"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:tooltipText="Priority"
                android:background="@drawable/border"
                android:padding="10dp"
                android:spinnerMode="dropdown"/>
        -->
        <TextView
            android:id="@+id/goalTypeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/goal_category_title"
            android:textSize="12dp"
            android:textStyle="bold" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/spinner_border"
            >
        <Spinner
            style="@style/Widget.AppCompat.DropDownItem.Spinner"
            android:id="@+id/spinnerType"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="0dp"
            android:tooltipText="Goal Type"
            android:textSize="10dp"
            android:spinnerMode="dropdown"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/add_task_ending"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/due_date_hint"
                android:layout_weight="4"
                android:textSize="12dp"
                android:textIsSelectable="true"
                android:background="@drawable/border_edit_text"
                android:maxLines="1"
                android:inputType="none"
                android:padding="12dp"/>

            <ImageView
                android:id="@+id/add_task_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"

                android:src="@drawable/ic_date_range_black_24dp" />

        </LinearLayout>


    </LinearLayout>


</FrameLayout>
